# KTH_Distributed-Systems

./: .gitignore  README.md
hw_1/: Commands.txt  MandelbrotPar.c  mandel  mandelbrot.c  mandelbrot.cc  mandelbrot_multiprocess.c  txt_to_png.py
hw_1/raphael/: MandelbrotPar.c  MandelbrotSeq.c  OddEvenTransposeSort.c  mandel  poisson1DRaph.c  txt_to_png.py
hw_2/: plot.py  poisson  poisson.c  poisson.txt
hw_3/: 1  10000000  100000000  1000000000  2  4  6  8  clear.sh  job.sh  odd_even_sort  odd_even_sort.c  odd_even_sort_r.c  plot.py  run.sh
project/: CMakeLists.txt  README.md  TIMES.txt  build.sh  debug.sh  evolution.txt  job.sh  job_test.sh  main.cpp  output.nohup.  run.sh  test.nohup  times_theory.py  visualize.py
project/data/: hist_data.txt
project/include/: env.hpp  helper.hpp  person.hpp  region.hpp
project/plots/: efficiency_plots.py  plot_hist.py  time_plots.py  visualize.py
project/src/: person.cpp  region.cpp
